Try overflow-hidden css property to prevent address bar from being hidden in chrome mobile. Doesnt affect PC

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
   margin: 0;
   font-size: 7.5vmin;
   overscroll-behavior: none;
+  overflow: hidden;
 }
 
 #game-board {
